omg
srcs/engine/minimap/minimap_draw.c:34:17: error: static declaration of ‘draw_direction_line’ follows non-static declaration
   34 | static void     draw_direction_line(t_game *game, t_vector center,
      |                 ^~~~~~~~~~~~~~~~~~~
In file included from includes/cub3d.h:27,
                 from srcs/engine/minimap/minimap_draw.c:13:
includes/minimap.h:33:9: note: previous declaration of ‘draw_direction_line’ with type ‘void(t_game *, t_vector,  t_vector,  int)’ {aka ‘void(struct s_game *, struct s_vector,  struct s_vector,  int)’}
   33 | void    draw_direction_line(t_game *game, t_vector center,
      |         ^~~~~~~~~~~~~~~~~~~
srcs/engine/minimap/minimap_draw.c: In function ‘draw_direction_line’:
srcs/engine/minimap/minimap_draw.c:45:18: error: using integer absolute value function ‘abs’ when argument is of floating-point type ‘double’ [-Werror=absolute-value]
   45 |         steps = (abs(end.x - center.x) > abs(end.y - center.y))
      |                  ^~~
srcs/engine/minimap/minimap_draw.c:45:42: error: using integer absolute value function ‘abs’ when argument is of floating-point type ‘double’ [-Werror=absolute-value]
   45 |         steps = (abs(end.x - center.x) > abs(end.y - center.y))
      |                                          ^~~
srcs/engine/minimap/minimap_draw.c:46:19: error: using integer absolute value function ‘abs’ when argument is of floating-point type ‘double’ [-Werror=absolute-value]
   46 |                 ? abs(end.x - center.x) : abs(end.y - center.y);
      |                   ^~~
srcs/engine/minimap/minimap_draw.c:46:43: error: using integer absolute value function ‘abs’ when argument is of floating-point type ‘double’ [-Werror=absolute-value]
   46 |                 ? abs(end.x - center.x) : abs(end.y - center.y);
      |                                           ^~~
At top level:
srcs/engine/minimap/minimap_draw.c:34:17: error: ‘draw_direction_line’ defined but not used [-Werror=unused-function]
   34 | static void     draw_direction_line(t_game *game, t_vector center,
      |                 ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:100: srcs/engine/minimap/minimap_draw.o] Error 1
